@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.298 2009/06/18 09:40:03 stelian Exp $
+$Id: CHANGES,v 1.299 2009/06/18 09:42:11 stelian Exp $
 
 Changes between versions 0.4b41 and 0.4b42 (released xxxxxxxxxxxxxxx)
 =====================================================================
@@ -65,6 +65,10 @@ Changes between versions 0.4b41 and 0.4b42 (released xxxxxxxxxxxxxxx)
 
 15.	Fixed a few spelling errors in the man pages (RedHat bug #489853).
 	Thanks to Adam Tkac <atkac@redhat.com> for the patch.
+
+16.	Fixed restore man page and program usage which incorrectly stated
+	that -P and -A were both allowed in the same invocation (RedHat
+	bug #490627). Thanks to Adam Tkac <atkac@redhat.com> for the patch.
 
 Changes between versions 0.4b40 and 0.4b41 (released January 2, 2006)
 =====================================================================
